# DataQuery-AI

./: README.md  docker-compose.yml  main.py  pyproject.toml  settings.py
AiAgent/: ReAct_db.py  Toolkit.py  __init__.py
Infrastructure/: Query_faker.py  __init__.py
Infrastructure/AgentConf/: AgentEnv.py  __init__.py
Infrastructure/db/: Postgres.py  __init__.py
