[project]
name = "dataquery-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "faker>=40.31.0",
    "fastapi>=0.139.2",
    "grandalf>=0.8",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-mistralai>=1.1.6",
    "loguru>=0.7.3",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.2.0",
]
